--- a/mi-proyecto/src/index.html
+++ b/mi-proyecto/src/index.html
@@ -1,13 +1,81 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>MiProyecto</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portal de empleo</title>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <!-- Incluye Bootstrap 5 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <script>
+    // Inicializar Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyDGovK0SAHMZ6ZXE1V_5DGp5xzNG9LeTcU",
+      authDomain: "formulario-7280b.firebaseapp.com",
+      databaseURL: "https://formulario-7280b-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "formulario-7280b",
+      storageBucket: "formulario-7280b.firebasestorage.app",
+      messagingSenderId: "274436337945",
+      appId: "1:274436337945:web:cf1e7dccb3d105f385d588",
+      measurementId: "G-4R4K2D85KE"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
+
+    // Función para agregar una oferta de empleo
+    function agregarOferta() {
+      const titulo = document.getElementById('tituloOferta').value;
+      const descripcion = document.getElementById('descripcionOferta').value;
+      const tipo = document.getElementById('tipoOferta').value;
+      const sector = document.getElementById('sectorOferta').value;
+      const experiencia = document.getElementById('experienciaOferta').value;
+      const ubicacion = document.getElementById('ubicacionOferta').value;
+      const salario = document.getElementById('salarioOferta').value;
+
+      // Referencia a la colección de ofertas
+      const ofertasRef = database.ref('ofertas');
+      ofertasRef.push({
+        titulo: titulo,
+        descripcion: descripcion,
+        tipo: tipo,
+        sector: sector,
+        experiencia: experiencia,
+        ubicacion: ubicacion,
+        salario: salario
+      });
+
+      alert("Oferta agregada correctamente");
+    }
+
+    // Función para agregar una demanda de empleo
+    function agregarDemanda() {
+      const nombre = document.getElementById('nombre').value;
+      const sector = document.getElementById('sector').value;
+      const tipo = document.getElementById('tipoDemanda').value;
+      const experiencia = document.getElementById('experienciaDemanda').value;
+      const ubicacion = document.getElementById('ubicacionDemanda').value;
+
+      // Referencia a la colección de demandas
+      const demandasRef = database.ref('demandas');
+      demandasRef.push({
+        nombre: nombre,
+        sector: sector,
+        tipo: tipo,
+        experiencia: experiencia,
+        ubicacion: ubicacion
+      });
+
+      alert("Demanda agregada correctamente");
+    }
+  </script>
 </head>
+
 <body>
   <app-root></app-root>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+
 </html>
