--- a/mi-proyecto/src/index.html
+++ b/mi-proyecto/src/index.html
@@ -5,11 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portal de empleo</title>
+
+  <!-- Bootstrap 5 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-  <!-- Incluye Bootstrap 5 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
   <script>
     // Inicializar Firebase
     const firebaseConfig = {
@@ -27,13 +31,19 @@
 
     // Función para agregar una oferta de empleo
     function agregarOferta() {
-      const titulo = document.getElementById('tituloOferta').value;
-      const descripcion = document.getElementById('descripcionOferta').value;
-      const tipo = document.getElementById('tipoOferta').value;
-      const sector = document.getElementById('sectorOferta').value;
-      const experiencia = document.getElementById('experienciaOferta').value;
-      const ubicacion = document.getElementById('ubicacionOferta').value;
-      const salario = document.getElementById('salarioOferta').value;
+      const titulo = document.getElementById('tituloOferta').value.trim();
+      const descripcion = document.getElementById('descripcionOferta').value.trim();
+      const tipo = document.getElementById('tipoOferta').value.trim();
+      const sector = document.getElementById('sectorOferta').value.trim();
+      const experiencia = document.getElementById('experienciaOferta').value.trim();
+      const ubicacion = document.getElementById('ubicacionOferta').value.trim();
+      const salario = document.getElementById('salarioOferta').value.trim();
+
+      // Verificar si todos los campos están completos
+      if (!titulo || !descripcion || !tipo || !sector || !experiencia || !ubicacion || !salario) {
+        alert("Por favor, completa todos los campos antes de enviar la oferta.");
+        return;
+      }
 
       // Referencia a la colección de ofertas
       const ofertasRef = database.ref('ofertas');
@@ -44,19 +54,34 @@
         sector: sector,
         experiencia: experiencia,
         ubicacion: ubicacion,
-        salario: salario
+        salario: salario,
       });
 
-      alert("Oferta agregada correctamente");
+      alert("La oferta ha sido registrada correctamente. ¡Gracias!");
+
+      // Opcional: Reiniciar el formulario
+      document.getElementById('tituloOferta').value = '';
+      document.getElementById('descripcionOferta').value = '';
+      document.getElementById('tipoOferta').value = 'Tiempo completo';
+      document.getElementById('sectorOferta').value = 'Tech';
+      document.getElementById('experienciaOferta').value = 'Menos de 1 año';
+      document.getElementById('ubicacionOferta').value = 'Valencia';
+      document.getElementById('salarioOferta').value = '';
     }
 
     // Función para agregar una demanda de empleo
     function agregarDemanda() {
-      const nombre = document.getElementById('nombre').value;
-      const sector = document.getElementById('sector').value;
-      const tipo = document.getElementById('tipoDemanda').value;
-      const experiencia = document.getElementById('experienciaDemanda').value;
-      const ubicacion = document.getElementById('ubicacionDemanda').value;
+      const nombre = document.getElementById('nombre').value.trim();
+      const sector = document.getElementById('sector').value.trim();
+      const tipo = document.getElementById('tipoDemanda').value.trim();
+      const experiencia = document.getElementById('experienciaDemanda').value.trim();
+      const ubicacion = document.getElementById('ubicacionDemanda').value.trim();
+
+      // Verificar si todos los campos están completos
+      if (!nombre || !sector || !tipo || !experiencia || !ubicacion) {
+        alert("Por favor, completa todos los campos antes de enviar el formulario.");
+        return;
+      }
 
       // Referencia a la colección de demandas
       const demandasRef = database.ref('demandas');
@@ -65,17 +90,27 @@
         sector: sector,
         tipo: tipo,
         experiencia: experiencia,
-        ubicacion: ubicacion
+        ubicacion: ubicacion,
       });
 
-      alert("Demanda agregada correctamente");
+      alert("La solicitud ha sido registrada correctamente. ¡Gracias y buena suerte!");
+
+      // Reiniciar el formulario
+      document.getElementById('nombre').value = '';
+      document.getElementById('sector').value = 'Tech';
+      document.getElementById('tipoDemanda').value = 'Tiempo completo';
+      document.getElementById('experienciaDemanda').value = 'Menos de 1 año';
+      document.getElementById('ubicacionDemanda').value = 'Valencia';
     }
+
   </script>
 </head>
 
-<body>
+<body class="bg-dark">
   <app-root></app-root>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
